--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The system is rigged against you. Here's how</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Seeing the World Like a Child</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Crispy Pizza 🍕 #pizza #food #pizzalover #pizza #pizzalover #streetfood #cooking</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>An Otherworldly Power | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -970,7 +970,7 @@
                     <div class="video-info">
                         <h3>Review  Pizza tools.( Pro Peel Gozney and Lilly Codroipo Spatula)</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2587,7 +2587,7 @@
                     <div class="video-info">
                         <h3>Same Day Grandma Style Pizza At Home 100%</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 05, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>The system is rigged against you. Here's how</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Seeing the World Like a Child</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7964,7 +7964,7 @@
                         <div class="video-info">
                             <h3>An Otherworldly Power | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Crispy Pizza 🍕 #pizza #food #pizzalover #pizza #pizzalover #streetfood #cooking</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9494,7 +9494,7 @@
                         <div class="video-info">
                             <h3>Review  Pizza tools.( Pro Peel Gozney and Lilly Codroipo Spatula)</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9703,7 +9703,7 @@
                         <div class="video-info">
                             <h3>Same Day Grandma Style Pizza At Home 100%</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 05, 2025</div>
                         </div>
                     </a>
                 </div>
